--- a/Pomodoro/style.css
+++ b/Pomodoro/style.css
@@ -1,3 +1,11 @@
 body {
     background-color: black;
 }
+
+.cardColor {
+    background-color: rgb(204, 0, 0);
+}
+
+.colorDentro{
+    background-color: rgb(182, 0, 0)
+}
